style: add font and define heading sizes

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,63 @@
 * {
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Montserrat", sans-serif;
+  line-height: 1.2;
 }
 
 .wrapper {
   max-width: 42.5rem;
   margin: 0 auto;
+}
+
+h1 {
+  font-size: 6rem;
+  font-weight: 300;
+  letter-spacing: -1.5;
+  margin: 6rem 0 0 0;
+}
+
+h2 {
+  font-size: 5rem;
+  font-weight: 300;
+  letter-spacing: -0.5;
+  margin: 5rem 0 0 0;
+}
+
+h3 {
+  font-size: 3rem;
+  font-weight: 400;
+  margin: 3rem 0 0 0;
+}
+
+h4 {
+  font-size: 2.125rem;
+  font-weight: 400;
+  margin: 2.125rem 0 0 0;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 1.5rem 0 0 0;
+}
+
+h6 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  margin: 1.25rem 0 0 0;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.5;
+  margin: 1.5rem 0 0 0;
 }
