--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,24 @@
+:root {
+  --dark: #000814;
+  --g-500: #313131;
+  --primary-900: #000814;
+  --primary-800: #061b3b;
+  --primary-500: #0e3d83;
+  --primary: var(--primary-500);
+  --primary-text: white;
+  --secondary: var(--g-500);
+  --secondary-text: white;
+  --danger: #d00000;
+  --danger-text: white;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
+}
+
+body {
+  color: var(--primary-800);
 }
 
 h1,
@@ -11,6 +29,7 @@ h5,
 h6 {
   font-family: "Montserrat", sans-serif;
   line-height: 1.2;
+  color: var(--dark);
 }
 
 .wrapper {
@@ -59,5 +78,50 @@ h6 {
 p {
   font-size: 1rem;
   line-height: 1.5;
+  letter-spacing: 0.5px;
   margin: 1.5rem 0 0 0;
+}
+
+button {
+  font-size: 1rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 5px;
+  border-width: 2px;
+  border: none;
+}
+
+.btn--primary {
+  color: var(--primary-text);
+  background-color: var(--primary);
+}
+
+.btn--primary-outline {
+  color: var(--primary);
+  border: solid;
+  border-color: var(--primary);
+  background-color: rgba(255, 255, 255, 0%);
+}
+
+.btn--secondary {
+  color: var(--secondary-text);
+  background-color: var(--secondary);
+}
+
+.btn--secondary-outline {
+  color: var(--secondary);
+  border: solid;
+  border-color: var(--secondary);
+  background-color: rgba(255, 255, 255, 0%);
+}
+
+.btn--danger {
+  color: var(--danger-text);
+  background-color: var(--danger);
+}
+
+.btn--danger-outline {
+  color: var(--danger);
+  border: solid;
+  border-color: var(--danger);
+  background-color: rgba(255, 255, 255, 0%);
 }
