--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,22 @@
 :root {
   --dark: #000814;
+  --g-600: #1c1c1c;
   --g-500: #313131;
+  --g-400: #4b4b4b;
   --primary-900: #000814;
   --primary-800: #061b3b;
+  --primary-600: #0c2f63;
   --primary-500: #0e3d83;
+  --primary-200: #1556b8;
   --primary: var(--primary-500);
   --primary-text: white;
-  --secondary: var(--g-500);
+  --secondary-600: var(--g-600);
+  --secondary-500: var(--g-500);
+  --secondary-400: var(--g-400);
   --secondary-text: white;
-  --danger: #d00000;
+  --danger-600: #a30a0a;
+  --danger-500: #d00000;
+  --danger-400: #e20202;
   --danger-text: white;
 }
 
@@ -84,15 +92,25 @@ p {
 
 button {
   font-size: 1rem;
-  padding: 0.25rem 0.5rem;
-  border-radius: 5px;
+  padding: 0.33rem 1rem;
+  border-radius: 4px;
   border-width: 2px;
   border: none;
+  box-shadow: 1px 3px #999;
+}
+
+button:active {
+  box-shadow: 1px 1px #999;
+  transform: translateY(1px);
 }
 
 .btn--primary {
   color: var(--primary-text);
   background-color: var(--primary);
+}
+
+.btn--primary:hover {
+  background-color: var(--primary-200);
 }
 
 .btn--primary-outline {
@@ -102,26 +120,72 @@ button {
   background-color: rgba(255, 255, 255, 0%);
 }
 
+.btn--primary-outline:hover {
+  background-color: var(--primary-500);
+  color: var(--primary-text);
+}
+
+.btn--primary:active,
+.btn--primary-outline:active {
+  background-color: var(--primary-600);
+  border-color: var(--primary-600);
+  color: var(--primary-text);
+}
+
 .btn--secondary {
   color: var(--secondary-text);
-  background-color: var(--secondary);
+  background-color: var(--secondary-500);
+}
+
+.btn--secondary:hover {
+  background-color: var(--secondary-400);
+  color: var(--secondary-text);
 }
 
 .btn--secondary-outline {
-  color: var(--secondary);
+  color: var(--secondary-500);
   border: solid;
-  border-color: var(--secondary);
+  border-color: var(--secondary-500);
   background-color: rgba(255, 255, 255, 0%);
+}
+
+.btn--secondary-outline:hover {
+  color: var(--secondary-text);
+  background-color: var(--secondary-500);
+}
+
+.btn--secondary:active,
+.btn--secondary-outline:active {
+  background-color: var(--secondary-600);
+  border-color: var(--secondary-600);
+  color: var(--secondary-text);
 }
 
 .btn--danger {
   color: var(--danger-text);
-  background-color: var(--danger);
+  background-color: var(--danger-500);
+}
+
+.btn--danger:hover {
+  background-color: var(--danger-500);
+  color: var(--danger-text);
 }
 
 .btn--danger-outline {
-  color: var(--danger);
+  color: var(--danger-500);
   border: solid;
-  border-color: var(--danger);
+  border-color: var(--danger-500);
   background-color: rgba(255, 255, 255, 0%);
+}
+
+.btn--danger-outline:hover {
+  color: var(--danger-text);
+  background-color: var(--danger-500);
+}
+
+.btn--danger:active,
+.btn--danger-outline:active {
+  background-color: var(--danger-600);
+  border-color: var(--danger-600);
+  color: var(--danger-text);
 }
