--- a/styles.css
+++ b/styles.css
@@ -226,3 +226,19 @@ select {
   font-size: 1rem;
   border-radius: 2px;
 }
+
+a {
+  color: var(--primary-200);
+}
+
+.skills__list,
+.nav__list {
+  padding-left: 0;
+  list-style: none;
+}
+
+.skills__item {
+  display: inline;
+  margin-right: 1rem;
+  font-size: 1.25rem;
+}
