--- a/styles.css
+++ b/styles.css
@@ -237,6 +237,10 @@ a {
   color: var(--primary-200);
 }
 
+section {
+  margin-top: 3.375rem;
+}
+
 .skills__list,
 .nav__list {
   padding-left: 0;
