--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   --g-600: #1c1c1c;
   --g-500: #313131;
   --g-400: #4b4b4b;
+  --g-300: #999;
   --g-200: #e5e5e57c;
   --primary-900: #000814;
   --primary-800: #061b3b;
@@ -106,11 +107,11 @@ button {
   padding: 0.33rem 1rem;
   border-radius: 4px;
   border: none;
-  box-shadow: 1px 2px #999;
+  box-shadow: 0px 2px var(--g-300);
 }
 
 button:active {
-  box-shadow: 1px 1px #999;
+  box-shadow: 0px 2px #999;
   transform: translateY(1px);
 }
 
@@ -206,16 +207,21 @@ button:active {
 input {
   display: block;
   width: 100%;
+  padding: 0.33rem 1rem;
   font-size: 1rem;
-  background-color: var(--g-200);
   border-radius: 2px;
   border-top: none;
   border-left: none;
   border-right: none;
   border-bottom: solid;
   border-width: 2px;
-  border-color: var(--g-200);
-  padding: 0.25rem 0.5rem;
+  border-bottom-color: var(--g-300);
+  color: var(--primary-800);
+}
+
+input:focus {
+  background-color: transparent;
+  outline-color: #0e3d83;
 }
 
 .radio {
